# predictor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  common_datatypes.h  data_deamon.py  main.cpp  predictor.cpp  predictor.h  predictor.py  todo.md  weather.cpp  weather.h
data/: database_schema.sql
data/predictions/: example.xml
